# dreamcue

./: .gitignore  CONTRIBUTING.md  README.md  modal_app.py  pyproject.toml
configs/: default.yaml
docs/: decisions.md  phase1-tuning.md
notes/: phase0-telemetry.txt  reel-broll.md
results/: phase1-manifest.json
scripts/: create_modal_secret.py  load_env.py  phase1_gate.py  smoke_test_local.py
src/dreamcue/: __init__.py
src/dreamcue/data/: __init__.py  facts.py  interference.py  probes.py  render.py
src/dreamcue/evaluation/: __init__.py  probe_eval.py
src/dreamcue/training/: __init__.py  dataset.py  interference_loop.py  learn_loop.py
tests/: test_data.py  test_eval.py  test_imports.py
