[project]
name = "dreamcue"
version = "0.1.0"
description = "Targeted Memory Reactivation for LLMs — a benchmark of cued vs. uniform replay during consolidation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "Tejas" }]

dependencies = [
    "torch>=2.4",
    "transformers>=4.46",
    "peft>=0.14",
    "accelerate>=1.2",
    "datasets>=3.2",
    "bitsandbytes>=0.45 ; sys_platform == 'linux'",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "huggingface-hub>=0.27",
    "modal>=1.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamcue"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
